--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -357,13 +357,22 @@ ggplot(aes(x = percent_exempt_MMR, y = ..density..), data = vaccReported) +
 * Ferry and San Juan counties distributiion is at a higher % than King County*
 
 ##Explore Exemption Types##
+
+Gather terms for exemption type (melt) the dataframe, the calculate the % of total exemptions that are of a particular type (medical or non-medical)  While this is not a tidy data frame it is a convenient way to look at observations by exemption type.  I am using this to develop a better understanding of the propotion of exemptions that are non-medical.
 ```{r echo=FALSE, exemption_types}
 
 melt <- gather(vaccReported_NLT_10_NGT_2500,exemption_type,exemptions,medical_exempt, nonmedical_exempt)
 
+str(melt)
+names(melt)
+summary(melt)
+
 #add percent by exemption type
 melt$percent_exemption_type <- round((melt$exemptions/melt$total_exemptions)*100,digits = 2)
 
+str(melt)
+names(melt)
+summary(melt)
 ggplot(data = melt, aes(x = percent_exemption_type, y = ..density..)) +
   geom_freqpoly(binwidth = log(1.25),aes(color = exemption_type)) +
   facet_wrap(school_type ~ school_year) +
@@ -377,78 +386,8 @@ ggplot(data = melt, aes(x = percent_exemption_type, y = ..count../sum(..count..)
 ```
 
 Public and private schools have similiar distributions and rates of both types of exemptions, for all three school years.  Public schools have a larger proportion of exempitons of both types.
-```{r echo=FALSE, group_by_attribute}
 
 
-#change nonmedical exempt to 20 and then resave .rds
-inspect <- vaccReported[vaccReported$school_name == "Tacoma Waldorf School",]
-
-#going to do for 2013 (most recent year) top 10 by mean nonmedical exempt for county, then withing that county, district, then city, then withing city the zip code.  Then get count of schools in each that are over 10% total exempt, and 5% MMR exempt.  Maybe save some of this for bivariate.  I'm thinking that in bivariate I can look at schools or zones over the MMR threshold and then determine what proportion of the total exemptions are from medical and which are from nonmedical in those zones.  that could be a final plot, the point being is taht choice is pushing it over.
-
-by_county_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
-  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
-            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
-            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
-            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_exempt))
-
-by_county_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
-  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
-            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
-            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
-            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_nonmedexempt))
-
-
-by_city_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
-  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
-            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
-            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
-            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_exempt))
-
-by_city_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
-  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
-            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
-            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
-            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_nonmedexempt))
-
-
-by_zip_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
-  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
-            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
-            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
-            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  arrange(desc(mean_percent_exempt))
-
-by_zip_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
-  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
-            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
-            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
-            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
-            schools=n(), 
-            students=sum(enrolled, na.rm=TRUE)) %>% 
-  na.omit() %>% 
-  filter(students >=500) %>%
-  arrange(desc(mean_percent_nonmedexempt))
-  
-```
 ```{r temp_sandbox}
 
 
@@ -556,6 +495,137 @@ I was suprised to see that two of the smaller counties, Ferry and San Juan had d
 
 
 # Bivariate Plots Section
+
+##Group by Attribute##
+Group observations by county, city, zip, etc. for the most recent school year, 2013-2014.  
+```{r echo=FALSE, group_by_attribute}
+
+names(vaccReported_NLT_10_NGT_2500_2013)
+
+#explain any enrollment cutoffs and gie str, summ, and names for data
+
+#change nonmedical exempt to 20 and then resave .rds
+inspect <- vaccReported[vaccReported$school_name == "Tacoma Waldorf School",]
+
+#going to do for 2013 (most recent year) top 10 by mean nonmedical exempt for county, then withing that county, district, then city, then withing city the zip code.  Then get count of schools in each that are over 10% total exempt, and 5% MMR exempt.  Maybe save some of this for bivariate.  I'm thinking that in bivariate I can look at schools or zones over the MMR threshold and then determine what proportion of the total exemptions are from medical and which are from nonmedical in those zones.  that could be a final plot, the point being is taht choice is pushing it over.
+
+#group by county
+
+by_county_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
+  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
+            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
+            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
+            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>%
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt))
+
+by_county_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_nonmedexempt))
+
+
+by_county_medexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_nonmedexempt))
+
+
+by_county_medexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
+  summarize(mean_percent_medical_exempt = round(mean(percent_medical_exempt, na.rm=TRUE), 2), 
+            median_percent_medical_exempt = round(median(percent_medical_exempt, na.rm=TRUE), 2), 
+            max_percent_medical_exempt = round(max(percent_medical_exempt, na.rm=TRUE), 2), 
+            min_percent_medical_exempt = round(min(percent_medical_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_medical_exempt))
+
+
+by_county_MMR <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county) %>% 
+  summarize(mean_percent_exempt_MMR = round(mean(percent_exempt_MMR, na.rm=TRUE), 2), 
+            median_percent_exempt_MMR = round(median(percent_exempt_MMR, na.rm=TRUE), 2), 
+            max_percent_exempt_MMR = round(max(percent_exempt_MMR, na.rm=TRUE), 2), 
+            min_percent_exempt_MMR = round(min(percent_exempt_MMR, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt_MMR))
+
+#merge county groups and sort by students enrolled
+
+county_group <- inner_join(by_county_medexempt, by_county_MMR, by = "school_county") %>%
+  inner_join(by_county_exempt, by = "school_county") %>%
+  select(-c(students.x, schools.x, students.y, schools.y)) %>%
+  arrange(desc(students))
+
+
+
+names(county_group)
+summary(county_group)
+
+
+
+#rm(by_county_exempt,by_county_medexempt,by_county_nonmedexempt,by_county_MMR)
+  
+
+
+
+by_city_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
+  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
+            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
+            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
+            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt))
+
+by_city_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_city) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_nonmedexempt))
+
+
+by_zip_exempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
+  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
+            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
+            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
+            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt))
+
+by_zip_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zip) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  filter(students >=500) %>%
+  arrange(desc(mean_percent_nonmedexempt))
+  
+```
 ```{r echo=FALSE, Bivariate_Plots}
 
 ```
