--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -70,6 +70,7 @@ vaccReported_NLT_10_NGT_2500_2013 <- subset(vaccReported_NLT_10_NGT_2500, school
 vaccReported_NLT_100_NGT_2500 <- subset(vaccReported,vaccReported$enrolled >= 100 & vaccReported$enrolled <= 2500) %>%
   arrange(desc(percent_exempt))
 
+
 brks <- c(1, 5, 10, 50, 100, 500, 1000, 5000, 10000)
 
 brks2 <- c(.25,.5, 1, 2.5, 5, 10, 15, 25, 50, 75, 100)
@@ -575,8 +576,7 @@ county_group <- inner_join(by_county_medexempt, by_county_MMR, by = "school_coun
 
 names(county_group)
 summary(county_group)
-
-
+str(county_group)
 
 #rm(by_county_exempt,by_county_medexempt,by_county_nonmedexempt,by_county_MMR)
   
@@ -624,9 +624,159 @@ by_zip_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zi
   na.omit() %>% 
   filter(students >=500) %>%
   arrange(desc(mean_percent_nonmedexempt))
-  
+names(vaccReported) 
 ```
 ```{r echo=FALSE, Bivariate_Plots}
+ggplot(data = vaccReported, aes(x = enrolled, y = total_exemptions)) +
+  geom_line(alpha = .25,aes(color = school_year)) +
+  geom_smooth()
+
+ggplot(data = subset(vaccReported,enrolled <= 2500), aes(x = enrolled, y = total_exemptions)) +
+  geom_line(alpha = .25,aes(color = school_year)) +
+  geom_smooth()
+
+ggplot(data = subset(vaccReported,enrolled <= 2000), aes(x = enrolled, y = total_exemptions)) +
+  geom_line(alpha = .25,aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+ggplot(data = vaccReported_NLT_10_NGT_2500_2013, aes(x = enrolled, y = total_exemptions)) +
+  geom_line(alpha = .5) +
+  geom_smooth()
+
+
+#exemption rate vs enrollment
+ggplot(vaccReported, aes(x = enrolled, y = percent_exempt)) + 
+  geom_point(alpha = .4, color = 'red')  +  
+  geom_line(alpha = .5,stat = 'summary',fun.y = mean, linetype = 1, color = "black", size = 1) +
+  scale_x_continuous(limits = c(0, 2000), breaks = seq(0,2000,250))
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = medical_exempt )) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = nonmedical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = nonmedical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+ggplot(data = vaccReported, aes(x = total_exemptions, y = exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+ggplot(data = county_group, aes(x = students, y = mean_percent_exempt)) +
+  geom_line() +
+  geom_point() +
+  geom_smooth()
+
+
+
+
+
+
+
+
+namez
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ```
 
