--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -578,7 +578,76 @@ names(county_group)
 summary(county_group)
 str(county_group)
 
-#rm(by_county_exempt,by_county_medexempt,by_county_nonmedexempt,by_county_MMR)
+
+#group by county, school_type
+
+by_county_exempt_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county,school_type) %>% 
+  summarize(mean_percent_exempt = round(mean(percent_exempt, na.rm=TRUE), 2), 
+            median_percent_exempt = round(median(percent_exempt, na.rm=TRUE), 2), 
+            max_percent_exempt = round(max(percent_exempt, na.rm=TRUE), 2), 
+            min_percent_exempt = round(min(percent_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>%
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt))
+
+by_county_nonmedexempt_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county, school_type) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_nonmedexempt))
+
+
+by_county_medexempt_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county, school_type) %>% 
+  summarize(mean_percent_nonmedexempt = round(mean(percent_nonmedexempt, na.rm=TRUE), 2), 
+            median_percent_nonmedexempt = round(median(percent_nonmedexempt, na.rm=TRUE), 2), 
+            max_percent_nonmedexempt = round(max(percent_nonmedexempt, na.rm=TRUE), 2), 
+            min_percent_nonmedexempt = round(min(percent_nonmedexempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_nonmedexempt))
+
+
+by_county_medexempt_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county,school_type) %>% 
+  summarize(mean_percent_medical_exempt = round(mean(percent_medical_exempt, na.rm=TRUE), 2), 
+            median_percent_medical_exempt = round(median(percent_medical_exempt, na.rm=TRUE), 2), 
+            max_percent_medical_exempt = round(max(percent_medical_exempt, na.rm=TRUE), 2), 
+            min_percent_medical_exempt = round(min(percent_medical_exempt, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_medical_exempt))
+
+
+by_county_MMR_type <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_county, school_type) %>% 
+  summarize(mean_percent_exempt_MMR = round(mean(percent_exempt_MMR, na.rm=TRUE), 2), 
+            median_percent_exempt_MMR = round(median(percent_exempt_MMR, na.rm=TRUE), 2), 
+            max_percent_exempt_MMR = round(max(percent_exempt_MMR, na.rm=TRUE), 2), 
+            min_percent_exempt_MMR = round(min(percent_exempt_MMR, na.rm=TRUE), 2), 
+            schools=n(), 
+            students=sum(enrolled, na.rm=TRUE)) %>% 
+  na.omit() %>% 
+  arrange(desc(mean_percent_exempt_MMR))
+
+#merge county/type groups and sort by students enrolled
+
+county_group_type <- inner_join(by_county_medexempt_type, by_county_MMR_type, by = c("school_county","school_type")) %>%
+  inner_join(by_county_exempt_type, by = c("school_county","school_type")) %>%
+  select(-c(students.x, schools.x, students.y, schools.y)) %>%
+  arrange(desc(students))
+
+
+
+names(county_group_type)
+summary(county_group_type)
+str(county_group_type)
+
+#rm(by_county_exempt_type,by_county_medexempt_type,by_county_nonmedexempt_type,by_county_MMR_type)
   
 
 
@@ -627,120 +696,188 @@ by_zip_nonmedexempt <- vaccReported_NLT_10_NGT_2500_2013 %>%  group_by(school_zi
 names(vaccReported) 
 ```
 ```{r echo=FALSE, Bivariate_Plots}
+
+#total exemptions vs. enrollment
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = total_exemptions)) +
   geom_line(alpha = .25,aes(color = school_year)) +
   geom_smooth()
 
+##
 ggplot(data = subset(vaccReported,enrolled <= 2500), aes(x = enrolled, y = total_exemptions)) +
   geom_line(alpha = .25,aes(color = school_year)) +
   geom_smooth()
 
+###
 ggplot(data = subset(vaccReported,enrolled <= 2000), aes(x = enrolled, y = total_exemptions)) +
   geom_line(alpha = .25,aes(color = school_year)) +
   geom_smooth(aes(color = school_year))
 
+##
 ggplot(data = vaccReported_NLT_10_NGT_2500_2013, aes(x = enrolled, y = total_exemptions)) +
   geom_line(alpha = .5) +
   geom_smooth()
 
 
 #exemption rate vs enrollment
+##
 ggplot(vaccReported, aes(x = enrolled, y = percent_exempt)) + 
   geom_point(alpha = .4, color = 'red')  +  
   geom_line(alpha = .5,stat = 'summary',fun.y = mean, linetype = 1, color = "black", size = 1) +
   scale_x_continuous(limits = c(0, 2000), breaks = seq(0,2000,250))
 
-ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_medical_exempt)) +
-  geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
-
-
-ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_nonmedexempt)) +
-  geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
-
-
-ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_exempt_MMR)) +
-  geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
-
-
 ggplot(data = vaccReported, aes(x = enrolled, y = percent_medical_exempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = percent_nonmedexempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = percent_exempt_MMR)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
+
+#exemption rates vs. total exemptions
+
+##
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth()
+
+##
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth()
+
+##
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth()
 
 
+
+#specific exemptions vs. enrollment
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = medical_exempt )) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = nonmedical_exempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = enrolled, y = exempt_MMR)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
-
+#specific exemptions vs. total exemptions
+##
 ggplot(data = vaccReported, aes(x = total_exemptions, y = medical_exempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = total_exemptions, y = nonmedical_exempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
-
+  geom_smooth()
+##
 ggplot(data = vaccReported, aes(x = total_exemptions, y = exempt_MMR)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+#specific exemption rates vs. total exemption rate
+##
 ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_medical_exempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_nonmedexempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
-
+##
 ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_exempt_MMR)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
+#specific exemption rates vs. exemption rate for data subset enrolled NLT 100 NGT 2500
+##
 ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_nonmedexempt)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
 
 ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_exempt_MMR)) +
   geom_line(alpha = .5, aes(color = school_year)) +
-  geom_smooth(aes(color = school_year))
+  geom_smooth()
 
 ggplot(data = county_group, aes(x = students, y = mean_percent_exempt)) +
   geom_line() +
   geom_point() +
   geom_smooth()
 
+#exemptions by school year
+ggplot(data = vaccReported, aes(x = school_year, y = total_exemptions)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = medical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = nonmedical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = exempt_MMR)) +
+  geom_boxplot()
 
 
 
+#exemptions by school type
+
+ggplot(data = vaccReported, aes(x = school_type, y = total_exemptions)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = medical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = nonmedical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = exempt_MMR)) +
+  geom_boxplot()
+
+#exemption rates by school year
+
+ggplot(data = vaccReported, aes(x = school_year, y = percent_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = percent_medical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = percent_nonmedexempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_year, y = percent_exempt_MMR)) +
+  geom_boxplot()
+
+#exemption rates by school type
+
+ggplot(data = vaccReported, aes(x = school_type, y = percent_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = percent_medical_exempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = percent_nonmedexempt)) +
+  geom_boxplot()
+
+ggplot(data = vaccReported, aes(x = school_type, y = percent_exempt_MMR)) +
+  geom_boxplot()
 
 
 
@@ -794,7 +931,94 @@ namez
 # Multivariate Plots Section
 
 ```{r echo=FALSE, Multivariate_Plots}
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
 
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = enrolled, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = enrolled, y = medical_exempt )) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = enrolled, y = nonmedical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = enrolled, y = exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = nonmedical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+###
+ggplot(data = vaccReported, aes(x = total_exemptions, y = exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_medical_exempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+###
+ggplot(data = vaccReported, aes(x = percent_exempt, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+###
+ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_nonmedexempt)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+
+ggplot(data = vaccReported_NLT_100_NGT_2500, aes(x = percent_exempt, y = percent_exempt_MMR)) +
+  geom_line(alpha = .5, aes(color = school_year)) +
+  geom_smooth(aes(color = school_year))
+
+ggplot(data = county_group, aes(x = students, y = mean_percent_exempt)) +
+  geom_line() +
+  geom_point() +
+  geom_smooth()
 ```
 
 # Multivariate Analysis
